// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`look after 1`] = `
Object {
  "meta": Object {
    "a": ActorPrivateMeta {
      "handlers": Set {
        [Function],
      },
      "incoming": Set {},
      "keepBy": Actor {
        "id": ID {
          "id": "2",
        },
        "state": Array [
          Object {
            "done": 0,
            "fail": 0,
          },
        ],
      },
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {},
    },
    "b": ActorPrivateMeta {
      "handlers": Set {
        [Function],
      },
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {},
    },
  },
  "state": Object {
    "a": Object {
      "count": 0,
    },
    "b": Object {
      "done": 0,
      "fail": 0,
    },
  },
}
`;

exports[`look after 2`] = `
Object {
  "meta": Object {
    "a": ActorPrivateMeta {
      "handlers": Set {
        [Function],
      },
      "incoming": Set {},
      "keepBy": Actor {
        "id": ID {
          "id": "2",
        },
        "state": Array [
          Object {
            "done": 1,
            "fail": 2,
          },
        ],
      },
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {},
    },
    "b": ActorPrivateMeta {
      "handlers": Set {
        [Function],
      },
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {},
    },
  },
  "state": Object {
    "a": Object {
      "count": 1,
    },
    "b": Object {
      "done": 1,
      "fail": 2,
    },
  },
}
`;
